fix: rustup to pinned dependencies (#979)
* fix: rustup to pinned dependencies

* fix: pin to GitHub hash

Signed-off-by: Scott Schreckengaust <scottschreckengaust@users.noreply.github.com>

* fix: removed single-quotes and succeeds

Signed-off-by: Scott Schreckengaust <scottschreckengaust@users.noreply.github.com>

---------

Signed-off-by: Scott Schreckengaust <scottschreckengaust@users.noreply.github.com>

--- a/src/aws-diagram-mcp-server/Dockerfile
+++ b/src/aws-diagram-mcp-server/Dockerfile
@@ -48,7 +48,7 @@ RUN apk update && \
     curl
 
 # Install Rust and Cargo with a newer version that supports edition2024
-RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain nightly && \
+RUN curl --proto '=https' --tlsv1.2 -sSf https://raw.githubusercontent.com/rust-lang/rustup/f7935a8ad24a445629ceedb2cb706a4469e1e5b3/rustup-init.sh | sh -s -- -v -y --default-toolchain nightly && \
     . $HOME/.cargo/env && \
     rustup default nightly
 
