feat: add @WIIASD as codeowner for aws-healthomics-mcp-server (#1009)
Add additional maintainer to the HealthOmics MCP server codeowners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -33,7 +33,7 @@ NOTICE                                                                    @awsla
 #/src/aws-bedrock-data-automation-mcp-server @awslabs/mcp-maintainers     @awslabs/mcp-admins
 /src/aws-diagram-mcp-server             @MichaelWalker-git                @awslabs/mcp-admins
 /src/aws-documentation-mcp-server       @Lavoiedavidw @JonLim             @awslabs/mcp-admins
-/src/aws-healthomics-mcp-server         @markjschreiber                   @awslabs/mcp-admins
+/src/aws-healthomics-mcp-server         @markjschreiber @WIIASD           @awslabs/mcp-admins
 #/src/aws-location-mcp-server           @awslabs/mcp-maintainers          @awslabs/mcp-admins
 /src/aws-msk-mcp-server                 @elmoctarebnou @dingyiheng        @awslabs/mcp-admins
 /src/aws-pricing-mcp-server             @nspring00 @aytech-in @s12v       @awslabs/mcp-admins
