fix: updating core to us proxy servers

--- a/src/core-mcp-server/pyproject.toml
+++ b/src/core-mcp-server/pyproject.toml
@@ -5,7 +5,58 @@ description = "An AWS Labs Model Context Protocol (MCP) server for aswlabs Core 
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "awslabs-amazon-kendra-index-mcp-server>=1.0.3",
+    "awslabs-amazon-keyspaces-mcp-server>=0.0.3",
+    "awslabs-amazon-mq-mcp-server>=2.0.4",
+    "awslabs-amazon-neptune-mcp-server>=1.0.2",
+    "awslabs-amazon-qbusiness-anonymous-mcp-server>=0.0.2",
+    "awslabs-amazon-qindex-mcp-server>=0.0.2",
+    "awslabs-amazon-rekognition-mcp-server>=0.0.3",
+    "awslabs-amazon-sns-sqs-mcp-server>=2.0.4",
+    "awslabs-aurora-dsql-mcp-server>=1.0.3",
+    "awslabs-aws-api-mcp-server>=0.2.2",
+    "awslabs-aws-bedrock-data-automation-mcp-server>=0.0.5",
+    "awslabs-aws-dataprocessing-mcp-server>=0.1.7",
+    "awslabs-aws-diagram-mcp-server>=1.0.5",
+    "awslabs-aws-documentation-mcp-server>=1.1.2",
+    "awslabs-aws-healthomics-mcp-server>=0.0.3",
+    "awslabs-aws-location-mcp-server>=2.0.3",
+    "awslabs-aws-msk-mcp-server>=0.0.3",
+    "awslabs-aws-pricing-mcp-server>=1.0.8",
+    "awslabs-aws-serverless-mcp-server>=0.1.7",
+    "awslabs-aws-support-mcp-server>=0.1.7",
+    "awslabs-bedrock-kb-retrieval-mcp-server>=1.0.4",
+    "awslabs-cdk-mcp-server>=1.0.4",
+    "awslabs-cfn-mcp-server>=1.0.6",
+    "awslabs-cloudwatch-appsignals-mcp-server>=0.1.4",
+    "awslabs-cloudwatch-logs-mcp-server>=0.0.4",
+    "awslabs-cloudwatch-mcp-server>=0.0.7",
+    "awslabs-code-doc-gen-mcp-server>=1.0.2",
+    "awslabs-cost-analysis-mcp-server>=1.0.5",
+    "awslabs-cost-explorer-mcp-server>=0.0.8",
+    "awslabs-documentdb-mcp-server>=1.0.2",
+    "awslabs-dynamodb-mcp-server>=1.0.4",
+    "awslabs-ecs-mcp-server>=0.1.5",
+    "awslabs-eks-mcp-server>=0.1.8",
+    "awslabs-elasticache-mcp-server>=0.1.4",
+    "awslabs-finch-mcp-server>=0.1.4",
+    "awslabs-frontend-mcp-server>=1.0.3",
+    "awslabs-git-repo-research-mcp-server>=1.0.5",
+    "awslabs-iam-mcp-server>=1.0.3",
+    "awslabs-lambda-mcp-server>=1.0.0",
+    "awslabs-lambda-tool-mcp-server>=2.0.4",
+    "awslabs-memcached-mcp-server>=1.0.4",
+    "awslabs-mysql-mcp-server>=1.0.2",
+    "awslabs-nova-canvas-mcp-server>=1.0.3",
+    "awslabs-postgres-mcp-server>=1.0.4",
+    "awslabs-prometheus-mcp-server>=0.2.2",
+    "awslabs-redshift-mcp-server>=0.0.3",
+    "awslabs-s3-tables-mcp-server>=0.0.6",
+    "awslabs-stepfunctions-tool-mcp-server>=0.1.9",
+    "awslabs-syntheticdata-mcp-server>=1.0.3",
+    "awslabs-timestream-for-influxdb-mcp-server>=0.0.2",
     "boto3>=1.37.0",
+    "fastmcp>=2.11.1",
     "loguru>=0.7.3",
     "mcp[cli]>=1.11.0",
     "pydantic>=2.10.6",
