--- a/src/redshift-mcp-server/manifest.json
+++ b/src/redshift-mcp-server/manifest.json
@@ -11,9 +11,10 @@
     "type": "python",
     "entry_point": "awslabs.redshift_mcp_server.server:main",
     "mcp_config": {
-      "command": "python",
+      "command": "${__dirname}/server/venv/bin/python",
       "args": ["-m", "awslabs.redshift_mcp_server.server"],
       "env": {
+        "PYTHONPATH": "${__dirname}/server:${__dirname}/server/venv/lib/python3.12/site-packages",
         "AWS_PROFILE": "${AWS_PROFILE:-default}",
         "AWS_REGION": "${AWS_REGION:-us-east-1}",
         "FASTMCP_LOG_LEVEL": "${FASTMCP_LOG_LEVEL:-INFO}"
