--- a/src/redshift-mcp-server/.dxtignore
+++ b/src/redshift-mcp-server/.dxtignore
@@ -23,11 +23,12 @@ coverage.xml
 .pytest_cache/
 .ruff_cache/
 
-# Root virtual environments (but not server/venv)
-/.venv/
-/venv/
-/env/
-/ENV/
+# Virtual environments
+.venv/
+venv/
+env/
+ENV/
+server/
 
 # Development files
 *.log
@@ -42,7 +43,6 @@ docker-healthcheck.sh
 CHANGELOG.md
 uv.lock
 uv-requirements.txt
-pyproject.toml
 
 # IDE files
 .vscode/
@@ -54,9 +54,3 @@ pyproject.toml
 
 # Documentation
 docs/
-README.md
-LICENSE
-NOTICE
-
-# Source files (already included in server/)
-/awslabs/
