--- a/src/redshift-mcp-server/manifest.json
+++ b/src/redshift-mcp-server/manifest.json
@@ -1,59 +1,62 @@
 {
-  "dxt_version": "0.1",
-  "name": "redshift-mcp-server",
-  "version": "0.0.3",
-  "description": "Amazon Redshift MCP Server - Discover, explore, and query Amazon Redshift clusters and serverless workgroups",
   "author": {
-    "name": "Amazon Web Services, Inc.",
-    "email": "203918161+awslabs-mcp@users.noreply.github.com"
+    "email": "203918161+awslabs-mcp@users.noreply.github.com",
+    "name": "Amazon Web Services, Inc."
   },
-  "server": {
-    "type": "python",
-    "entry_point": "awslabs.redshift_mcp_server.server:main",
-    "mcp_config": {
-      "command": "uvx",
-      "args": ["--from", "awslabs.redshift-mcp-server@file://${__dirname}", "awslabs.redshift-mcp-server"],
-      "env": {
-        "AWS_PROFILE": "${AWS_PROFILE:-default}",
-        "AWS_REGION": "${AWS_REGION:-us-east-1}",
-        "FASTMCP_LOG_LEVEL": "${FASTMCP_LOG_LEVEL:-INFO}"
-      }
-    }
-  },
-  "tools": [
-    {
-      "name": "redshift_discover_clusters",
-      "description": "Discover available Redshift clusters and serverless workgroups"
-    },
-    {
-      "name": "redshift_list_databases",
-      "description": "List databases in a Redshift cluster or workgroup"
-    },
-    {
-      "name": "redshift_list_schemas",
-      "description": "List schemas in a Redshift database"
-    },
-    {
-      "name": "redshift_list_tables",
-      "description": "List tables in a Redshift schema"
-    },
-    {
-      "name": "redshift_describe_table",
-      "description": "Get detailed information about a Redshift table"
-    },
-    {
-      "name": "redshift_execute_query",
-      "description": "Execute SQL queries on Redshift (READ ONLY mode)"
-    },
-    {
-      "name": "redshift_get_query_history",
-      "description": "Get query execution history"
-    }
-  ],
+  "description": "Amazon Redshift MCP Server - Discover, explore, and query Amazon Redshift clusters and serverless workgroups",
+  "dxt_version": "0.1",
   "homepage": "https://awslabs.github.io/mcp/servers/redshift-mcp-server/",
+  "license": "Apache-2.0",
+  "name": "redshift-mcp-server",
   "repository": {
     "type": "git",
     "url": "https://github.com/awslabs/mcp"
   },
-  "license": "Apache-2.0"
+  "server": {
+    "entry_point": "server/venv/bin/awslabs.redshift-mcp-server",
+    "mcp_config": {
+      "args": [
+        "${__dirname}/server/venv/bin/awslabs.redshift-mcp-server"
+      ],
+      "command": "${__dirname}/server/venv/bin/python",
+      "env": {
+        "AWS_PROFILE": "${AWS_PROFILE:-default}",
+        "AWS_REGION": "${AWS_REGION:-us-east-1}",
+        "FASTMCP_LOG_LEVEL": "${FASTMCP_LOG_LEVEL:-INFO}",
+        "PYTHONPATH": "${__dirname}/server/venv/lib/python3.10/site-packages"
+      }
+    },
+    "type": "python"
+  },
+  "tools": [
+    {
+      "description": "Discover available Redshift clusters and serverless workgroups",
+      "name": "redshift_discover_clusters"
+    },
+    {
+      "description": "List databases in a Redshift cluster or workgroup",
+      "name": "redshift_list_databases"
+    },
+    {
+      "description": "List schemas in a Redshift database",
+      "name": "redshift_list_schemas"
+    },
+    {
+      "description": "List tables in a Redshift schema",
+      "name": "redshift_list_tables"
+    },
+    {
+      "description": "Get detailed information about a Redshift table",
+      "name": "redshift_describe_table"
+    },
+    {
+      "description": "Execute SQL queries on Redshift (READ ONLY mode)",
+      "name": "redshift_execute_query"
+    },
+    {
+      "description": "Get query execution history",
+      "name": "redshift_get_query_history"
+    }
+  ],
+  "version": "0.0.3"
 }
