--- a/.github/workflows/dxt.yml
+++ b/.github/workflows/dxt.yml
@@ -96,6 +96,17 @@ jobs:
         working-directory: src/${{ matrix.package }}
         run: |
           uv sync --frozen --active
+      - name: Create NPM Package Lock
+        id: create-package-lock
+        run: |
+          cat <<EOT > package-lock.json
+          {
+            "name": "automated-dxt",
+            "version": "0.0.0",
+            "lockfileVersion": 3,
+            "packages": {}
+          }
+          EOT          
       - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
           node-version: "22.14.0"
