--- a/src/ecs-mcp-server/pyproject.toml
+++ b/src/ecs-mcp-server/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "black>=23.3.0",
+    "commitizen>=4.2.2",
     "isort>=5.12.0",
     "mypy>=1.3.0",
     "pytest>=7.3.1",
@@ -88,3 +89,13 @@ markers = [
 [tool.coverage.run]
 concurrency = ["gevent"]
 omit = ["tests/*"]
+
+[tool.commitizen]
+name = "cz_conventional_commits"
+version = "0.0.0"
+tag_format = "v$version"
+version_files = [
+    "pyproject.toml:version",
+    "awslabs/ecs_mcp_server/__init__.py:__version__"
+]
+update_changelog_on_bump = true
