chore: Ddb mcp lock downdependecies (#1071)
* Update README.md with installer links

* Update README.md with installer links

* Update README.md with installer links

* Fixing duplicate headings

* Lock dependencies to latest versions

- boto3: 1.38.14 → 1.40.5
- mcp: 1.12.3 → 1.12.4
- pydantic: 2.11.4 → 2.11.7
- typing-extensions: 4.13.2 → 4.14.1
- loguru: 0.7.3 (unchanged)

* Update uv.lock after merging latest changes

---------

Co-authored-by: alexa-perlov <56009415+alexa-perlov@users.noreply.github.com>

--- a/src/dynamodb-mcp-server/pyproject.toml
+++ b/src/dynamodb-mcp-server/pyproject.toml
@@ -5,11 +5,11 @@ description = "The official MCP Server for interacting with AWS DynamoDB"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "boto3>=1.28.0",
-    "loguru>=0.7.0",
-    "mcp[cli]>=1.11.0",
-    "pydantic>=2.10.6",
-    "typing-extensions>=4.0.0",
+    "boto3==1.40.5",
+    "loguru==0.7.3",
+    "mcp[cli]==1.12.4",
+    "pydantic==2.11.7",
+    "typing-extensions==4.14.1",
 ]
 license = {text = "Apache-2.0"}
 license-files = ["LICENSE", "NOTICE" ]
