feat: AWS WA SEC Tool MCP Server (#613)
* PR for aws-wa-sec-tool-mcp-sercer 0.1.0

* updat README.md file for PR

* remove DEBUG message to pass github hook

* fix pyproject name, add tests, add cursor deeplink install btn

* fix pyproject setting

* fix uv.lock

* fix pyproject.toml

* update pyproject.toml for tests dependencies

* fix pyproject

* update pyproject.toml for tests dependencies

* update uv.lock

* update test cases

* update test cases

* update test cases - fix pyright

* update test cases - fix pyright

* fix: add IAM Access Analyzer check

* update documentation for PR

* update storage security service coverage

* update to pass pre-commit & rebased to latest main

* append test case for coverage requirement

* update test cases

* remove unnecessary DEBUG msg

* fix pyright err

* chore(doc): update main README.md

* update to fit with documentation requirements

* add VSCode installation one click into src/aws-wa-sec-tool-mcp-server/README.md

* append user_agent_extra for all client session

* rename the package from aws-wa-sec-tool-mcp-server to well-architected-security-mcp-server by PACE request.

* update README & related docs

* update test case

* fix all the USER_AGENT_CONFIG static version number to __version__

* fix README installation image & link

* fix cursor.com/en link issue.

* update cursor deeplink

---------

Co-authored-by: Jun Tin Yeh <bobyeh@amazon.com>
Co-authored-by: alexa-perlov <56009415+alexa-perlov@users.noreply.github.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,8 +4,6 @@
 
 *                                     @awslabs/mcp-maintainers            @awslabs/mcp-admins
 
-## Secure specific files and directories
-
 CODE_OF_CONDUCT.md                                                        @awslabs/mcp-admins
 CONTRIBUTING.md                                                           @awslabs/mcp-admins
 LICENSE                                                                   @awslabs/mcp-admins
@@ -39,6 +37,7 @@ NOTICE                                                                    @awsla
 /src/aws-pricing-mcp-server             @nspring00 @aytech-in @s12v       @awslabs/mcp-admins
 /src/aws-serverless-mcp-server          @bx9900                           @awslabs/mcp-admins
 /src/aws-support-mcp-server             @Wook133                          @awslabs/mcp-admins
+/src/well-architected-security-mcp-server @juntinyeh                        @awslabs/mcp-admins
 #/src/bedrock-kb-retrieval-mcp-server   @awslabs/mcp-maintainers          @awslabs/mcp-admins
 /src/cdk-mcp-server                     @jimini55                         @awslabs/mcp-admins
 /src/cfn-mcp-server                     @karamvsingh                      @awslabs/mcp-admins
