--- a/.github/workflows/check-license-header.yml
+++ b/.github/workflows/check-license-header.yml
@@ -17,4 +17,4 @@ jobs:
         with:
           path: .
           config: ./.github/workflows/check-license-header.json
-          strict: true
+          strict: false
