feat: add cloudtrail MCP server (#974)
* feat: add cloudtrail MCP server

* fix: update docusaurus and refactor pagination logic

* fix: update uv version to 0.8.10

* Update src/cloudtrail-mcp-server/README.md

Co-authored-by: alexa-perlov <56009415+alexa-perlov@users.noreply.github.com>

* fix: update README.md

---------

Co-authored-by: Rohit Kapoor <rokap@amazon.com>
Co-authored-by: Scott Schreckengaust <scottschreckengaust@users.noreply.github.com>
Co-authored-by: Alain Krok <alkrok@amazon.com>
Co-authored-by: alexa-perlov <56009415+alexa-perlov@users.noreply.github.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -42,6 +42,7 @@ NOTICE                                                                    @awsla
 #/src/bedrock-kb-retrieval-mcp-server   @awslabs/mcp-maintainers          @awslabs/mcp-admins
 /src/cdk-mcp-server                     @jimini55                         @awslabs/mcp-admins
 /src/cfn-mcp-server                     @karamvsingh                      @awslabs/mcp-admins
+/src/cloudtrail-mcp-server              @rokafella                        @awslabs/mcp-admins
 /src/ccapi-mcp-server                   @novekm                           @awslabs/mcp-admins
 /src/cloudwatch-appsignals-mcp-server   @yiyuan-he @mxiamxia @iismd17 @syed-ahsan-ishtiaque   @awslabs/mcp-admins
 /src/cloudwatch_logs_mcp_server         @lemmoi @shri-tambe               @awslabs/mcp-admins
