finally fixing all pytest and pyright errors 🔮

--- a/src/amazon-bedrock-agentcore-mcp-server/pyproject.toml
+++ b/src/amazon-bedrock-agentcore-mcp-server/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "PyYAML>=6.0",
     "bedrock-agentcore>=0.1.2",
     "bedrock-agentcore-starter-toolkit>=0.1.6",
+    "strands-agents-tools>=0.2.5",
 ]
 license = {text = "Apache-2.0"}
 license-files = ["LICENSE", "NOTICE" ]
